<resources>
    <string name="app_name">Vialer</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="no_network_connection">No internet connection</string>
    <string name="title_activity_dialer">Dialer</string>
    <string name="allowed_dialpad_characters">0123456789*#+</string>
    <string name="title_state_calling">Calling</string>
    <string name="title_unknown_caller">Unknown</string>
    <string name="title_activity_setup">Setup</string>
    <string name="statistics_menu_item_title">Statistics</string>
    <string name="settings_menu_item_title">Settings</string>
    <string name="logout_menu_item_title">Logout</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="auto_login_error">WebActivity: %s</string>
    <string name="login_error">Login failed: %s</string>
    <string name="call_incoming">Incoming call</string>
    <string name="call_incoming_expanded">Incoming call from:</string>
    <string name="call_outgoing">Outgoing call</string>
    <string name="call_incoming_short">Incoming</string>
    <string name="call_outgoing_short">Outgoing</string>
    <string name="call_ended">Call ended</string>
    <string name="call_on_hold">On hold: %s</string>
    <string name="call_hangup">Hang up</string>
    <string name="call_connected">Connected</string>
    <string name="call_unreachable">Unreachable</string>
    <string name="call_incoming_accept">Accept</string>
    <string name="call_incoming_decline">Decline</string>
    <string name="call_back_button_confirmation">You are about to end this call, are you sure?</string>
    <string name="call_back_button_confirmation_yes">Yes, end the call</string>
    <string name="call_back_button_confirmation_no">No</string>
    <string name="dialer_connect_a_b_info">Two step modus will setup a call to your phone first and will call the other party when you answer the call.</string>
    <string name="dialer_connect_a_b_info_title">Two step modus</string>
    <string name="dialer_warning_a_b_connect">Poor connection, Two step calling enabled</string>
    <string name="dialer_warning_no_connection">No connection, cannot call</string>
    <string name="dialer_warning_voip_disabled">VoIP disabled, enable in settings</string>
    <string name="version_info">Version: %s</string>
    <string name="version_info_beta">Version: %1$s Build: %2$s</string>
    <string name="call_disconnected_reason_not_found">Number was not found</string>
    <string name="rating_popup_title">Please rate your experience with %1$s so far!</string>
    <string name="rating_popup_ignore_button">Not now</string>
    <string name="rating_popup_dont_ask_again_button">Don\'t ask again</string>
    <string name="rating_popup_below_threshold_text">We are sorry you do not like the app, please let us know what we did wrong in the box below.</string>
    <string name="rating_popup_above_threshold_text">We are very happy you like the app, we\'d really appreciate it if you could leave a review in the Google Play Store too!</string>
    <string name="rating_popup_feedback_title">Thanks for your input!</string>
    <string name="rating_popup_feedback_hint">What could we do to make it a 5-star app for you?</string>
    <string name="rating_popup_feedback_submit_button">Submit</string>
    <string name="rating_popup_post_feedback_title">Your feedback will be a great help in improving our product</string>
    <string name="rating_popup_post_feedback_message">Watch for future updates to see improvements, or you can submit a public review in the Google Play Store.</string>
    <string name="rating_popup_post_feedback_done">Done</string>
    <string name="rating_popup_post_feedback_write_review">Write review</string>
    <string name="title_activity_update">Updating</string>
    <string name="update_spinner_title">Initializing</string>
    <string name="update_spinner_message">Please wait a moment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_settings">App permissions</string>
    <string name="webactivity_open_page_failed">Failed to open web page.</string>
    <string name="logout_dialog_text">Are you sure you want to logout?</string>
    <string name="logout_dialog_positive">Logout</string>
    <string name="logout_dialog_negative">Cancel</string>
    <string name="cannot_logout_error_title">No available internet connection</string>
    <string name="cannot_logout_error_text">An internet connection is needed to log you off.</string>
    <string name="set_userdestination_api_fail">Editing of availability has failed. Please try again later.</string>
    <string name="login_header_label_text">Business calls in the cloud</string>
    <string name="login_header_label_subtext">in the cloud</string>
    <string name="password_edittext_hint">Password</string>
    <string name="email_edittext_hint">Email Address</string>
    <string name="username_edittext_hint">Username</string>
    <string name="forgot_password_button_title">Forgot password</string>
    <string name="login_button_title">login</string>
    <string name="login_missing_field_title">Warning</string>
    <string name="login_missing_field_message">Please fill in all fields before login!</string>
    <string name="change_password_webview_toast">To make use of the app, you need to login once and change your password</string>
    <string name="header_forgot_password_title">Forgot your password?</string>
    <string name="forgot_password_button_text">Send</string>
    <string name="forgot_password_description">Please enter your email address and we will send you instructions on setting a new password.</string>
    <string name="forgot_password_missing_field_title">Warning</string>
    <string name="forgot_password_missing_field_message">Please fill in all fields before login!</string>
    <string name="forgot_password_alert_title">Password reset</string>
    <string name="forgot_password_alert_message">If your user is %1s we will send you an email with instructions to reset your password.</string>
    <string name="forgot_password_failed_title">Forgot Password failed</string>
    <string name="forgot_password_failed_message">Please try again.</string>
    <string name="forgot_password_success_title">Password reset</string>
    <string name="forgot_password_success_message">You should receive an email shortly, containing instructions for resetting your password.</string>
    <string name="configure_button_title">Continue</string>
    <string name="configure_header_label_text">Account \nconfiguration</string>
    <string name="configure_mobile_number_text">Enter your mobile phone number below:</string>
    <string name="outgoing_number_description">The following number will be displayed when calling someone:</string>
    <string name="phonenumber_prefix_edittext_hint">Prefix</string>
    <string name="phonenumber_edittext_hint">Mobile number</string>
    <string name="outgoingnumber_edittext_hint">Outgoing number</string>
    <string name="phonenumber_info_text_title">Mobile phone number</string>
    <string name="phonenumber_info_text">To make two step calling possible, we need to have your mobile phone number.</string>
    <string name="set_voip_account_button_text">Set VoIP account</string>
    <string name="user_change_title">Change user</string>
    <string name="password_change_title">Change password</string>
    <string name="voip_account_missing_title">Missing \n VoIP Account</string>
    <string name="voip_account_missing_text">You do not currently have a VoIP account linked to your user, this is necessary to be able to make and receive calls via VoIP.\n\nIf you do not intend to use VoIP and only wish to use the management and/or two-step calling features then you may skip this step.</string>
    <string name="welcome_text">Welcome to Vialer,\n\n%1$s!</string>
    <string name="placeholder_name">Nameless user</string>
    <string name="start_calling_button">Get started</string>
    <string name="onboarding_login_failed_title">Login failed</string>
    <string name="onboarding_login_failed_message">Please try again.</string>
    <string name="onboarding_login_failed_too_many_attempts_title">Too many attempts</string>
    <string name="onboarding_login_failed_too_many_attempts_message">Please try again soon.</string>
    <string name="onboarding_no_internet_message">An internet connection is required.</string>
    <string name="onboarding_account_configure_failed_title">Configuration failed</string>
    <string name="settings_category_call">Call settings</string>
    <string name="settings_call_using_voip_title">Call using VoIP</string>
    <string name="settings_use_phones_ringtone_title">Use phone ringtone</string>
    <string name="settings_link_advanced_call_settings">Advanced call settings</string>
    <string name="settings_category_android">Android settings</string>
    <string name="settings_ignore_battery_optimization_title">Always run in background</string>
    <string name="settings_ignore_battery_optimization_desc">This application will no longer be restricted by Android battery optimization, increasing the reliability of incoming calls. It is highly recommended that this is enabled.</string>
    <string name="settings_category_debug">Debug settings</string>
    <string name="settings_remote_logging_title">Remote logging</string>
    <string name="settings_remote_logging_id_title">Remote logging ID</string>
    <string name="settings_feedback_title">Send feedback</string>
    <string name="settings_feedback_desc">Report issues or suggest new features</string>
    <string name="settings_account_category_voip">VoIP account</string>
    <string name="settings_account_username">Username</string>
    <string name="settings_account_name">Name</string>
    <string name="settings_account_description">Description</string>
    <string name="settings_account_account_id">Account ID</string>
    <string name="settings_account_outgoing_number">Outgoing number</string>
    <string name="settings_account_mobile_number">Mobile number</string>
    <string name="settings_account_mobile_number_not_matching">The currently configured mobile number does not match the number belonging to your SIM card. Click here to automatically update it.</string>
    <string name="settings_account_mobile_number_description">The mobile number of this device, this is used for two-step calling.</string>
    <string name="settings_advanced_call_category_audio">Audio</string>
    <string name="settings_advanced_call_category_network">Network</string>
    <string name="settings_advanced_call_category_sip">SIP</string>
    <string name="settings_advanced_call_audio_codec">Audio quality</string>
    <string name="settings_advanced_call_call_using">Call using</string>
    <string name="settings_advanced_call_encryption">Encrypted calling</string>
    <string name="settings_advanced_call_encryption_description_off">Third parties may be able to intercept and listen to your phone calls.</string>
    <string name="settings_advanced_call_encryption_description_on">Your calls are encrypted and cannot be accessed by third parties.</string>
    <string name="settings_advanced_call_stun">STUN</string>
    <string name="settings_advanced_call_stun_desc">STUN can improve connectivity when behind Network Address Translation (NAT).</string>
    <string name="info_menu_item_title">Info</string>
    <string name="info_button_title">How does Vialer work?</string>
    <string name="dial_plan_menu_item_title">Dial plan</string>
    <string name="contacts_menu_item_title">Contacts</string>
    <string name="recent_plan_menu_item_title">Recent</string>
    <string name="options_menu_item_title">Options</string>
    <string name="not_encrypted">Calls are not encrypted</string>
</resources>