<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:fragment="com.voipgrid.vialer.settings.AccountSettingsFragment"
        android:icon="@drawable/ic_settings_person_black_24dp"
        app:title="My Account"/>

    <PreferenceCategory
        app:key="call_settings"
        app:title="@string/settings_category_call"
        android:icon="@drawable/ic_settings_call_black_24dp">

        <SwitchPreferenceCompat
            app:key="PREF_HAS_SIP_ENABLED"
            app:title="@string/settings_call_using_voip_title"
            app:summary="@string/settings_call_using_voip_desc"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="use_phone_ringtone"
            app:title="@string/settings_use_phones_ringtone_title"
            app:summary="@string/settings_use_phones_ringtone_desc"
            app:defaultValue="false"/>

        <Preference
            android:fragment="com.voipgrid.vialer.settings.AdvancedCallSettingsFragment"
            app:title="@string/settings_link_advanced_call_settings"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="android_settings"
        app:title="@string/settings_category_android"
        android:icon="@drawable/ic_settings_android_black_24dp">

        <SwitchPreferenceCompat
            app:key="battery_optimisation"
            app:persistent="false"
            app:title="@string/settings_ignore_battery_optimization_title"
            app:summary="@string/settings_ignore_battery_optimization_desc"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_category_debug"
        android:icon="@drawable/ic_settings_bug_report_black_24dp">

        <Preference
            app:key="feedback"
            app:isPreferenceVisible="true"
            app:title="@string/settings_feedback_title"
            app:summary="@string/settings_feedback_desc"/>


        <SwitchPreferenceCompat
            app:key="PREF_REMOTE_LOGGING"
            app:title="@string/settings_remote_logging_title"
            app:summary="@string/settings_remote_logging_desc"/>

        <Preference
            app:key="PREF_REMOTE_LOGGING_ID"
            app:title="@string/settings_remote_logging_id_title"
            android:dependency="PREF_REMOTE_LOGGING"
            app:enableCopying="true"
            app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>