<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/title_label"
        style="@style/HeaderTitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_forgot_password_title" />

    <TextView
        android:id="@+id/subtitle_label"
        style="@style/DescriptionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/forgot_password_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="0dp">

        <EditText
            android:id="@+id/edit_text_email"
            style="@style/OnboardingEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edittext_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="email"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send_password_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/forgot_password_button_text" />
</LinearLayout>
