<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.voipgrid.vialer.onboarding.LoginFragment"
    >
    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderTitleTextViewStyle"
        android:text="@string/welcome_text"
        android:fontFamily="sans-serif"
        />
    <TextView
        android:id="@+id/subtitle_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/title_label"
        style="@style/HeaderTitleTextViewStyle"
        android:text="@string/placeholder_name"
        android:fontFamily="sans-serif-light"
        />
    <Button
        android:id="@+id/button_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/start_calling_button"
        />
</RelativeLayout>
